--- a/db/miniproject_partition_pins.json
+++ b/db/miniproject_partition_pins.json
@@ -2,7 +2,32 @@
 	"partitions" : [
 		{
 			"name" : "Top",
-			"pins" : []
+			"pins" : [
+				{
+					"name" : "red_out",
+					"strict" : false
+				},
+				{
+					"name" : "green_out",
+					"strict" : false
+				},
+				{
+					"name" : "blue_out",
+					"strict" : false
+				},
+				{
+					"name" : "horiz_sync_out",
+					"strict" : false
+				},
+				{
+					"name" : "vert_sync_out",
+					"strict" : false
+				},
+				{
+					"name" : "CLK",
+					"strict" : false
+				}
+			]
 		}
 	]
 }
