--- a/cs305_project/cs305_project.qsf
+++ b/cs305_project/cs305_project.qsf
@@ -18,7 +18,7 @@
 #
 # Quartus Prime
 # Version 18.1.0 Build 625 09/12/2018 SJ Standard Edition
-# Date created = 13:43:45  May 01, 2024
+# Date created = 11:56:12  May 13, 2024
 #
 # -------------------------------------------------------------------------- #
 #
@@ -40,18 +40,24 @@ set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CEBA4F23C7
 set_global_assignment -name TOP_LEVEL_ENTITY cs305_project
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:43:45  MAY 01, 2024"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:56:12  MAY 13, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Standard Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name VHDL_FILE cs305_project.vhd
+set_global_assignment -name VHDL_FILE vga_sync.vhd
+set_global_assignment -name VHDL_FILE bouncy_ball.vhd
+set_global_assignment -name VHDL_FILE multi_signal.vhd
 set_global_assignment -name VHDL_FILE mouse.vhd
-set_global_assignment -name VHDL_FILE clk_25M.vhd
+set_global_assignment -name VHDL_FILE seven_seg.vhd
+set_global_assignment -name QIP_FILE cs305_pll.qip
+set_global_assignment -name SIP_FILE cs305_pll.sip
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK2_50 -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK3_50 -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK4_50 -entity DE0_CV_Default
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK_50 -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DRAM_ADDR[0] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DRAM_ADDR[1] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DRAM_ADDR[2] -entity DE0_CV_Default
@@ -243,12 +249,17 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[9] -entity DE0_CV
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[0] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[1] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[2] -entity DE0_CV_Default
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[3] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[0] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[1] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[2] -entity DE0_CV_Default
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_G[3] -entity DE0_CV_Default
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_HS -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[0] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[1] -entity DE0_CV_Default
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[2] -entity DE0_CV_Default
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[3] -entity DE0_CV_Default
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_VS -entity DE0_CV_Default
 set_location_assignment PIN_H13 -to CLOCK2_50
 set_location_assignment PIN_E10 -to CLOCK3_50
 set_location_assignment PIN_V15 -to CLOCK4_50
@@ -410,9 +421,6 @@ set_location_assignment PIN_K9 -to SD_DATA[0]
 set_location_assignment PIN_D12 -to SD_DATA[1]
 set_location_assignment PIN_E12 -to SD_DATA[2]
 set_location_assignment PIN_C11 -to SD_DATA[3]
-set_location_assignment PIN_U13 -to SW[0]
-set_location_assignment PIN_V13 -to SW[1]
-set_location_assignment PIN_T13 -to SW[2]
 set_location_assignment PIN_T12 -to SW[3]
 set_location_assignment PIN_AA15 -to SW[4]
 set_location_assignment PIN_AB15 -to SW[5]
@@ -437,30 +445,17 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_location_assignment PIN_M9 -to Clk
-set_global_assignment -name VHDL_FILE seven_seg.vhd
-set_global_assignment -name VHDL_FILE ball.vhd
-set_global_assignment -name VHDL_FILE vga_sync.vhd
+set_location_assignment PIN_U7 -to pb1
+set_location_assignment PIN_W9 -to pb2
 set_location_assignment PIN_H8 -to horiz_sync_out
 set_location_assignment PIN_G8 -to vert_sync_out
 set_location_assignment PIN_A5 -to red_out
 set_location_assignment PIN_J8 -to green_out
 set_location_assignment PIN_A7 -to blue_out
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to blue_out
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Clk
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to green_out
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to horiz_sync_out
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to red_out
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vert_sync_out
-set_global_assignment -name QIP_FILE cs305_pll.qip
-set_global_assignment -name SIP_FILE cs305_pll.sip
-set_global_assignment -name VHDL_FILE bouncy_ball.vhd
-set_global_assignment -name VHDL_FILE multi_signal.vhd
-set_location_assignment PIN_U7 -to pb1
-set_location_assignment PIN_W9 -to pb2
-set_location_assignment PIN_AA2 -to led0
-set_location_assignment PIN_AA1 -to led1
-set_location_assignment PIN_G2 -to mouse_clk
-set_location_assignment PIN_D3 -to mouse_data
+set_location_assignment PIN_G2 -to mouse_data
+set_location_assignment PIN_D3 -to mouse_clk
+set_location_assignment PIN_AA2 -to right_button
+set_location_assignment PIN_AA1 -to left_button
 set_location_assignment PIN_U21 -to mouse_column[0]
 set_location_assignment PIN_V21 -to mouse_column[1]
 set_location_assignment PIN_W22 -to mouse_column[2]
@@ -475,8 +470,11 @@ set_location_assignment PIN_AA18 -to mouse_row[3]
 set_location_assignment PIN_AB18 -to mouse_row[4]
 set_location_assignment PIN_AA17 -to mouse_row[5]
 set_location_assignment PIN_U22 -to mouse_row[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to led0
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to led1
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to blue_out
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Clk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to green_out
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to horiz_sync_out
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to left_button
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to mouse_clk
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to mouse_column[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to mouse_column[5]
@@ -495,5 +493,13 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to mouse_row[1]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to mouse_row[0]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pb1
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to pb2
-set_global_assignment -name VHDL_FILE inverter.vhd
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to red_out
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to right_button
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vert_sync_out
+set_location_assignment PIN_U13 -to sw1
+set_location_assignment PIN_V13 -to sw2
+set_location_assignment PIN_T13 -to sw3
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw1
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw2
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to sw3
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
