tutorural swithc working

--- a/db/cs305_project_partition_pins.json
+++ b/db/cs305_project_partition_pins.json
@@ -40,11 +40,15 @@
 					"strict" : false
 				},
 				{
+					"name" : "pb1",
+					"strict" : false
+				},
+				{
 					"name" : "pb2",
 					"strict" : false
 				},
 				{
-					"name" : "pb1",
+					"name" : "sw0",
 					"strict" : false
 				}
 			]
