--- a/cs305_project.qsf
+++ b/cs305_project.qsf
@@ -429,7 +429,6 @@ set_location_assignment PIN_K9 -to SD_DATA[0]
 set_location_assignment PIN_D12 -to SD_DATA[1]
 set_location_assignment PIN_E12 -to SD_DATA[2]
 set_location_assignment PIN_C11 -to SD_DATA[3]
-set_location_assignment PIN_U13 -to SW[0]
 set_location_assignment PIN_V13 -to SW[1]
 set_location_assignment PIN_T13 -to SW[2]
 set_location_assignment PIN_T12 -to SW[3]
@@ -491,4 +490,5 @@ set_global_assignment -name VHDL_FILE bird.vhd
 set_global_assignment -name VHDL_FILE Binary_UpDownCounter.vhd
 set_global_assignment -name QIP_FILE cs305_pll.qip
 set_global_assignment -name SIP_FILE cs305_pll.sip
+set_location_assignment PIN_U13 -to sw0
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
