--- a/cs305_project.qsf
+++ b/cs305_project.qsf
@@ -492,4 +492,7 @@ set_global_assignment -name VHDL_FILE bird.vhd
 set_global_assignment -name VHDL_FILE Binary_UpDownCounter.vhd
 set_global_assignment -name QIP_FILE cs305_pll.qip
 set_global_assignment -name SIP_FILE cs305_pll.sip
+set_global_assignment -name VHDL_FILE ball_sprite_printer.vhd
+set_global_assignment -name VHDL_FILE pausegame.vhd
+set_global_assignment -name VHDL_FILE ball_sprite.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
